[package]
name = "tinyrick"
description = "a freeform Rust build system"
version = "0.0.10"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"
homepage = "https://github.com/mcandre/tinyrick"
documentation = "https://docs.rs/tinyrick/"

[dependencies]
die = "0.2.0"
getopts = "0.2.21"
lazy_static = "1.4.0"

[lib]
name = "tinyrick"

[[bin]]
name = "tinyrick"
path = "src/tinyrick.rs"
