[package]
name = "arithmancy"
description = "an *advanced* mathematical compilation"
version = "0.0.1"
edition = "2024"
authors = ["Andrew Pennebaker <andrew.pennebaker@gmail.com>"]
license = "BSD-2-Clause"

[dependencies]
getopts = "0.2.21"
tinyrick = { version = "*", path = "..", optional = true }

[features]
letmeout = ["tinyrick"]

[lib]
path = "src/lib/arithmancy.rs"

[[bin]]
name = "add_two"
path = "src/bin/add_two.rs"

[[bin]]
name = "tinyrick"
path = "tinyrick.rs"
required-features = ["letmeout"]
